--- a/Webservice/flask.ipynb
+++ b/Webservice/flask.ipynb
@@ -118,12 +118,14 @@
     "\n",
     "        prediction = torch.where(output[0] == output.max())[0].item()\n",
     "        label = 'Predicted : ' + class_names[str(prediction)] + ' ' + '   /   Probability : ' + str(round(round(torch.softmax(output, -1)[0].max().item(), 3) * 100, 2)) + ' %'\n",
+    "        \n",
+    "        if not os.path.exists('./static/image/' + class_names[str(prediction)]):\n",
+    "            os.makedirs('./static/image/' + class_names[str(prediction)])\n",
+    "            \n",
     "        im_list = os.listdir('./static/image/' + class_names[str(prediction)])\n",
     "        file_num = int(len(im_list)/2) + 1\n",
-    "\n",
     "        file_ex = filename[filename.index('.')+1:] # file extension\n",
     "        cv2.imwrite('./static/image/' + class_names[str(prediction)] + '/' + filename[:filename.index('.')] + '_' + str(file_num) + '.' + file_ex, original_img)\n",
-    "\n",
     "        '''CAM image rendering'''\n",
     "        fw = model.classifier.weight.cpu().detach().numpy()\n",
     "        fw = fw.transpose()\n",
@@ -199,9 +201,9 @@
       " * Running on all addresses.\n",
       "   WARNING: This is a development server. Do not use it in a production deployment.\n",
       " * Running on http://192.168.0.20:5000/ (Press CTRL+C to quit)\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:21] \"GET / HTTP/1.1\" 200 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:21] \"GET /static/style.css HTTP/1.1\" 404 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:21] \"GET /static/ HTTP/1.1\" 404 -\n",
+      "192.168.0.20 - - [10/Nov/2021 16:57:09] \"GET / HTTP/1.1\" 200 -\n",
+      "192.168.0.20 - - [10/Nov/2021 16:57:09] \"GET /static/ HTTP/1.1\" 404 -\n",
+      "192.168.0.20 - - [10/Nov/2021 16:57:09] \"GET /static/style.css HTTP/1.1\" 404 -\n",
       "Z:\\codes\\USskintumor\\model\\Gridattentionblock.py:47: UserWarning: nn.init.constant is now deprecated in favor of nn.init.constant_.\n",
       "  nn.init.constant(self.psi.bias.data, 10.0) # initialize the bias for psi\n",
       "Z:\\codes\\USskintumor\\weight_inits.py:17: UserWarning: nn.init.kaiming_normal is now deprecated in favor of nn.init.kaiming_normal_.\n",
@@ -212,14 +214,10 @@
       "  warnings.warn(\"Default upsampling behavior when mode={} is changed \"\n",
       "D:\\Anaconda\\envs\\pytorch\\lib\\site-packages\\torch\\nn\\functional.py:1639: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
       "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:30] \"POST /predict HTTP/1.1\" 200 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:30] \"GET /static/style.css HTTP/1.1\" 404 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:31] \"GET /static/image/epidermal%20cyst/10033339_20200212163654_9.png HTTP/1.1\" 200 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:31] \"GET /static/image/epidermal%20cyst/CAM_10033339_20200212163654_9.png HTTP/1.1\" 200 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:40] \"POST /predict HTTP/1.1\" 200 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:40] \"GET /static/style.css HTTP/1.1\" 404 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:40] \"GET /static/image/epidermal%20cyst/3708847_20200212162034_10.png HTTP/1.1\" 200 -\n",
-      "192.168.0.20 - - [10/Nov/2021 16:48:40] \"GET /static/image/epidermal%20cyst/CAM_3708847_20200212162034_10.png HTTP/1.1\" 200 -\n"
+      "192.168.0.20 - - [10/Nov/2021 16:57:15] \"POST /predict HTTP/1.1\" 200 -\n",
+      "192.168.0.20 - - [10/Nov/2021 16:57:15] \"GET /static/style.css HTTP/1.1\" 404 -\n",
+      "192.168.0.20 - - [10/Nov/2021 16:57:16] \"GET /static/image/lipoma/7713683_20200212163809_002_1.png HTTP/1.1\" 200 -\n",
+      "192.168.0.20 - - [10/Nov/2021 16:57:16] \"GET /static/image/lipoma/CAM_7713683_20200212163809_002_1.png HTTP/1.1\" 200 -\n"
      ]
     }
    ],
